@@ -33,6 +33,9 @@ extern	size_t		EncodeStringLengthURL(char *q);
 extern	size_t		EncodeStringLengthBackslash(char *p);
 extern	size_t		EncodeStringBackslash(char *q, char *p);
 
+extern	size_t		EncodeStringLengthBackslashCRLF(char *p);
+extern	size_t		EncodeStringBackslashCRLF(char *q, char *p);
+
 extern	size_t		EncodeBase64(char *out, int size, byte *in, size_t len);
 extern	size_t		DecodeBase64(byte *out, int size, char *in, size_t len);
 extern	size_t		EncodeLengthBase64(char *str);
